<resources>
    <string name="app_name">Wezen</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="menu_language">Language</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="search_hint">Enter Github Username</string>
    <string name="icon_cat">Icon Cat</string>
    <string name="copyright">Copyright 2022 Budi Setiawan</string>
    <string name="image_blue">Image Blue</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="no_data">No Data</string>
</resources>